# 3d-zipper-tube-modeling

./: .gitignore  3D Zipper Tube.py  README.md  Test.py  Testing Matrices.py  Testing Segment 1  TubeMaker.py  TubeMaker3d.py  Zipper.py  printing.py  pyproject.toml  requirements.txt  sympy_test.py
tests/: test_tube.py
zipper_tube/: __init__.py
