[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zipper-tube"
version = "0.1.0"
description = "Geometry modelling for 3D zipper tubes."
authors = [
    {name = "Lincoln Packer", email = "lincolnppacker@gmail.com"}
    {name = "Peter Cope", email = ""}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "sympy"
]

[project.urls]
"Homepage" = ""

[tool.setuptools]
packages = ["zipper_tube"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
